# poppins

./: Cargo.toml  DEV.md  LICENSE  README.md
src/: bootstrap.rs  help.rs  infer.rs  lib.rs  main.rs  train.rs
src/beyond_scope/: beyond_scope_create_samples.rs  beyond_scope_structs.rs  mod.rs
src/bpe/: bpe_cache.rs  bpe_create_pair_counts_map.rs  bpe_create_sequence.rs  bpe_get_special_tokens.rs  bpe_infer_tokenize.rs  bpe_init_vocab.rs  bpe_token_writer.rs  bpe_tokenizer.rs  bpe_tokenizer_json.rs  bpe_train.rs  bpe_train_tokenize.rs  bpe_write_tokenizer_json.rs  mod.rs
src/cli/: cli.rs  cli_command.rs  cli_validate.rs  mod.rs
src/config/: config.rs  config_get_compression_dim.rs  config_get_rope_dim.rs  config_get_total_params.rs  config_huggingface.rs  config_new.rs  config_proven_fundamentals.rs  config_save.rs  config_set.rs  mod.rs
src/device/: device.rs  device_defaults.rs  device_detect.rs  device_is_cuda_available.rs  device_is_metal_available.rs  mod.rs
src/sample/: mod.rs  sample_create_samples.rs  sample_create_via_ids.rs  sample_create_via_tags.rs  sample_get_variants.rs  sample_macros.rs  sample_place_into_vecs.rs  sample_structs.rs  sample_token_stats_container.rs
src/tag/: mod.rs  tag_get_byte_length_ai_item.rs  tag_get_byte_offset_last_ai_start.rs  tag_write_ai_content.rs  tag_write_ai_section.rs  tag_write_code_close.rs  tag_write_code_open.rs  tag_write_line_break.rs  tag_write_prompt_content.rs  tag_write_prompt_section.rs  tag_write_tag.rs  tag_writer.rs
src/ternary/: mod.rs  ternary.rs  ternary_computation.rs  ternary_layer.rs  ternary_layer_forward.rs  ternary_weights.rs
src/tokens/: mod.rs  tokens_get_special.rs
src/train/: english.xml  math.xml  mod.rs  train.rs  train.xml  train.xsd  train_create_corpus.rs  train_read_xml.rs  train_write_bins.rs  train_write_txts.rs  train_write_xmls.rs
src/train_xml/: mod.rs  train_xml.rs  train_xml_code_snippets.rs  train_xml_constants.rs  train_xml_constants_parse.rs  (+32 more)
