# Cargo.toml

[package]
license = "MIT"
name = "poppins"
edition = "2024"
version = "0.1.0"
readme = "README.md"
authors = ["Chris Carrington"]
homepage = "https://github.com/beoptimal369/poppins"
repository = "https://github.com/beoptimal369/poppins"
keywords = ["ai", "llm", "bitnet", "ternary", "machine-learning"]
categories = ["command-line-utilities", "artificial-intelligence"]
description = "Our mission is to be the default way developers create custom LLMs"

[dev-dependencies]
tempfile = "3.27.0"

[dependencies]
rand = "0.10.0"
regex = "1.12.3"
byteorder = "1.5.0"
serde_json = "1.0.149"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
quick-xml = { version = "0.39.2", features = ["serialize", "overlapped-lists"] }
